@@ -1,4 +1,11 @@
-2009-09-25 0.68 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+2009-10-10 0.69 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+    * Missing end quotes in error code docs
+    * examples/csv-check now shows detected eol
+    * Auto detection of eol => "\r" in streams
+    * Optimized caching. All cache changes now in XS
+
+2009-10-04 0.68 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
     * Attribute auto_diag now localizes to +1 if autodie is active
     * Output name generation in csv2xls (RT#48954)
